Bug#589574: [PATCH] dh_fixperms: Ensure files in /etc/sudoers.d/ are mode 440. Closes: #589574
Signed-off-by: Carsten Hey <carsten@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.9.4) UNRELEASED; urgency=low
+
+  * dh_fixperms: Ensure files in /etc/sudoers.d/ are mode 440. Closes: #589574
+
+ -- Carsten Hey <carsten@debian.org>  Sun, 18 Jul 2010 22:30:06 +0200
+
 debhelper (7.9.3) unstable; urgency=low
 
   * perl_makemaker: import compat(). Closes: #587654
