--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.9.4) UNRELEASED; urgency=low
+debhelper (8.0.0) UNRELEASED; urgency=low
 
   [ Carsten Hey ]
   * dh_fixperms: Ensure files in /etc/sudoers.d/ are mode 440. Closes: #589574
@@ -7,6 +7,7 @@ debhelper (7.9.4) UNRELEASED; urgency=low
   * python_distutils: Pass --force to setup.py build, to ensure that when
     python-dbg is run it does not win and result in scripts having it in
     the shebang line. Closes: #589759
+  * Finalized v8 mode, which is the new recommended default.
 
  -- Carsten Hey <carsten@debian.org>  Sun, 18 Jul 2010 22:30:06 +0200
 
