--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.0.0) UNRELEASED; urgency=low
+debhelper (8.0.0) unstable; urgency=low
 
   [ Carsten Hey ]
   * dh_fixperms: Ensure files in /etc/sudoers.d/ are mode 440. Closes: #589574
@@ -6,7 +6,7 @@ debhelper (8.0.0) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Finalized v8 mode, which is the new recommended default.
 
- -- Carsten Hey <carsten@debian.org>  Sun, 18 Jul 2010 22:30:06 +0200
+ -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
 debhelper (7.9.3) unstable; urgency=low
 
