python_distutils: Pass --force to setup.py build, to ensure that when python-dbg is run it does not win and result in scripts having it in the shebang line. Closes: #589759
(cherry picked from commit 865e6266a5eaae81004bf530bc23da1c3fdc10b1)

Conflicts:

	debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (8.1.0) UNRELEASED; urgency=low
+
+  * python_distutils: Pass --force to setup.py build, to ensure that when
+    python-dbg is run it does not win and result in scripts having it in
+    the shebang line. Closes: #589759
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
+
 debhelper (8.0.0) unstable; urgency=low
 
   [ Carsten Hey ]
