Man page fixes about what program -u passes params to. Closes: #593342

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ debhelper (8.1.0) UNRELEASED; urgency=low
   * python_distutils: Pass --force to setup.py build, to ensure that when
     python-dbg is run it does not win and result in scripts having it in
     the shebang line. Closes: #589759
+  * Man page fixes about what program -u passes params to. Closes: #593342
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
