--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (8.1.0) UNRELEASED; urgency=low
     python-dbg is run it does not win and result in scripts having it in
     the shebang line. Closes: #589759
   * Man page fixes about what program -u passes params to. Closes: #593342
+  * Avoid open fd 5 or 6 breaking buildsystem test suite. Closes: #596679
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
