--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 debhelper (8.1.0) UNRELEASED; urgency=low
 
+  [ Valery Perrin ]
+  * update french translation.
+
+  [ Joey Hess ]
   * python_distutils: Pass --force to setup.py build, to ensure that when
     python-dbg is run it does not win and result in scripts having it in
     the shebang line. Closes: #589759
