Fix french misspelling and strings lenght

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (8.1.0) UNRELEASED; urgency=low
 
   [ Valery Perrin ]
   * update french translation.
+  * Fix french misspelling
 
   [ Joey Hess ]
   * python_distutils: Pass --force to setup.py build, to ensure that when
