Large update to Spanish man page translations by Omar Campagne. Closes: #600913

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ debhelper (8.1.0) UNRELEASED; urgency=low
     the shebang line. Closes: #589759
   * Man page fixes about what program -u passes params to. Closes: #593342
   * Avoid open fd 5 or 6 breaking buildsystem test suite. Closes: #596679
+  * Large update to Spanish man page translations by Omar Campagne.
+    Closes: #600913
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
