--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,11 @@ debhelper (8.1.0) UNRELEASED; urgency=low
   * Avoid open fd 5 or 6 breaking buildsystem test suite. Closes: #596679
   * Large update to Spanish man page translations by Omar Campagne.
     Closes: #600913
+  * dh_installdeb: Support debian/package.maintscript files,
+    which can contain dpkg-maintscript-helper commands. This can be used
+    to automate moving or removing conffiles, or anything added to
+    dpkg-maintscript-helper later on. Closes: #574443
+    (Thanks, Colin Watson)
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
