--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ debhelper (8.1.0) UNRELEASED; urgency=low
     to automate moving or removing conffiles, or anything added to
     dpkg-maintscript-helper later on. Closes: #574443
     (Thanks, Colin Watson)
+  * Massive man page typography patch. Closes: #600883
+    (Thanks, David Prévot)
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
