Explicitly build-depend on a new enough perl-base. Closes: #601188

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ debhelper (8.1.0) UNRELEASED; urgency=low
     (Thanks, Colin Watson)
   * Massive man page typography patch. Closes: #600883
     (Thanks, David Prévot)
+  * Explicitly build-depend on a new enough perl-base. Closes: #601188
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
