dh: Inhibit logging for commands run inside override targets
Note that only the overridden command is inhibited. I wanted to avoid a
behavior change if a rules file runs other debhelper commands inside the
target, and relies on the logging preventing them being run later on in
the sequence.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ debhelper (8.1.0) UNRELEASED; urgency=low
   * Massive man page typography patch. Closes: #600883
     (Thanks, David Prévot)
   * Explicitly build-depend on a new enough perl-base. Closes: #601188
+  * dh: Inhibit logging when an override target runs the overridden command,
+    to avoid unexpected behavior if the command succeeded but the overall
+    target fails. Closes: #601037
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
