French translation update after massive man page typography
Signed-off-by: Valéry Perrin <valery.perrin.debian@free.fr>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,8 @@ debhelper (8.1.0) UNRELEASED; urgency=low
 
   [ Valery Perrin ]
   * update french translation.
-  * Fix french misspelling
+  * Fix french misspelling.
+  * French translation update after massive man page typography 
 
   [ Joey Hess ]
   * python_distutils: Pass --force to setup.py build, to ensure that when
