dh: Improve filtering in dh_listpackages example. Closes: #604561

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ debhelper (8.1.0) UNRELEASED; urgency=low
     target fails. Closes: #601037
   * Fix deprecated command list on translated debhelper(7) man pages.
     Closes: #601204
+  * dh: Improve filtering in dh_listpackages example. Closes: #604561
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
