--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ debhelper (8.1.0) UNRELEASED; urgency=low
   * Fix deprecated command list on translated debhelper(7) man pages.
     Closes: #601204
   * dh: Improve filtering in dh_listpackages example. Closes: #604561
+  * dh: Add support for build-arch, build-indep, install-arch and
+    install-indep sequences. Closes: #604563
+    (Thanks, Roger Leigh)
   
   [ Valery Perrin ]
   * update french translation.
