dh_installdocs: Clarify that debian/README.Debian and debian/TODO are only installed into the first package listed in debian/control. Closes: #606036

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,9 @@ debhelper (8.1.0) UNRELEASED; urgency=low
     (Thanks, Roger Leigh)
   * dh_listpackages: Do not display warnings if options cause no packages
     to be listed.
+  * dh_installdocs: Clarify that debian/README.Debian and debian/TODO are
+    only installed into the first package listed in debian/control.
+    Closes: #606036
   
   [ Valery Perrin ]
   * update french translation.
