dh_compress: Javascript files are not compressed, as these go with (uncompressed) html files. Closes: #603553

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,8 @@ debhelper (8.1.0) UNRELEASED; urgency=low
   * dh_installdocs: Clarify that debian/README.Debian and debian/TODO are
     only installed into the first package listed in debian/control.
     Closes: #606036
+  * dh_compress: Javascript files are not compressed, as these go with
+    (uncompressed) html files. Closes: #603553
   
   [ Valery Perrin ]
   * update french translation.
