--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.1.0) UNRELEASED; urgency=low
+debhelper (8.1.0) unstable; urgency=low
 
   [ Joey Hess ]
   * python_distutils: Pass --force to setup.py build, to ensure that when
@@ -43,7 +43,7 @@ debhelper (8.1.0) UNRELEASED; urgency=low
   * Fix french misspelling.
   * French translation update after massive man page typography 
 
- -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 05 Feb 2011 12:00:04 -0400
 
 debhelper (8.0.0) unstable; urgency=low
 
