--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (8.1.1) UNRELEASED; urgency=low
+
+  * dh_strip, dh_makeshlibs: use triplet-objdump, triplet-objcopy and
+    triplet-strip from cross-binutils when cross-compiling; closes: #412118.
+    (Thanks, Loïc Minier)
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 08 Feb 2011 15:32:35 -0400
+
 debhelper (8.1.0) unstable; urgency=low
 
   [ Joey Hess ]
