fix unterminated S<..> in spanish po

--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -3577,7 +3577,7 @@ msgid ""
 "[S<I<debhelper options>>] [S<I<file> ... I<dest>>]"
 msgstr ""
 "B<dh_install> [B<-X>I<elemento>] [B<--autodest>] [B<--sourcedir=>I<dir>] "
-"[S<I<opciones debhelper>>] [S<I<fichero> [...] I<dest>]"
+"[S<I<opciones debhelper>>] [S<I<fichero> [...] I<dest>>]"
 
 # type: textblock
 #. type: textblock
