--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.1.1) UNRELEASED; urgency=low
+debhelper (8.1.1) unstable; urgency=low
 
   * dh_strip, dh_makeshlibs: use triplet-objdump, triplet-objcopy and
     triplet-strip from cross-binutils when cross-compiling; Closes: #412118.
@@ -9,7 +9,7 @@ debhelper (8.1.1) UNRELEASED; urgency=low
     and when the whole target is run, the log is updated to indicate that
     commands run during the override have finished. Closes: #612828
 
- -- Joey Hess <joeyh@debian.org>  Tue, 08 Feb 2011 15:32:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 10 Feb 2011 19:58:34 -0400
 
 debhelper (8.1.0) unstable; urgency=low
 
