--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (8.1.2) UNRELEASED; urgency=low
+debhelper (8.1.2) unstable; urgency=low
 
   * Fix logging at end of an override target that never actually runs
     the overridden command. Closes: #613418
 
- -- Joey Hess <joeyh@debian.org>  Mon, 14 Feb 2011 14:21:38 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 14 Feb 2011 14:22:17 -0400
 
 debhelper (8.1.1) unstable; urgency=low
 
