--- a/debhelper.pod
+++ b/debhelper.pod
@@ -528,7 +528,7 @@ can cause some packages to fail to build.
 B<dh> requires the sequence to run be specified as the first parameter, and
 any switches come after it. Ie, use "B<dh $@ --foo>", not "B<dh --foo $@>".
 
-=item
+=item -
 
 B<dh_auto_>I<*> prefer to use Perl's B<Module::Build> in preference to F<Makefile.PL>.
 
