--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (8.1.3) UNRELEASED; urgency=low
+
+  * dh_auto_clean: Inhibit logging, so that, if dh_auto_clean is used
+    in some rule other than clean, perhaps to clean up an intermediate
+    build before a second build is run, debian/rules clean still runs it.
+    Closes: #615553
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 27 Feb 2011 15:43:12 -0400
+
 debhelper (8.1.2) unstable; urgency=low
 
   * Fix logging at end of an override target that never actually runs
