--- a/debhelper.pod
+++ b/debhelper.pod
@@ -516,9 +516,8 @@ Changes from v8 are:
 Multiarch support. In particular, B<dh_auto_configure> passes
 multiarch directories to autoconf in --libdir and --libexecdir,
 while B<dh_makeshlibs> detects packages containing multiarch
-directories and sets a Pre-Dependency on multiarch-support is
-${misc:Pre-Depends} . A version of dpkg-dev supporting multiarch
-is required for this to work.
+directories and sets a Pre-Dependency on multiarch-support in
+${misc:Pre-Depends}
 
 =item v8
 
