--- a/debian/changelog
+++ b/debian/changelog
@@ -8,11 +8,12 @@ debhelper (8.1.3) UNRELEASED; urgency=low
     changes may be added to that mode.
   * Support multiarch in v9. Thanks, Steve Langasek. Closes: #617761
   * dh_auto_configure: Support multiarch in v9 by passing multiarch
-    directories to --libdir and --libexecdir. dpkg-dev (>= 1.16.0)
-    is needed for this to be done, so packages should build-depend on it.
+    directories to --libdir and --libexecdir.
   * dh_makeshlibs: Detect packages using multiarch directories and
-    make ${misc:Pre-Depends} expand to multiarch-support. Also needs
-    a new enough dpkg-dev.
+    make ${misc:Pre-Depends} expand to multiarch-support.
+  * Depend on dpkg-dev (>= 1.16.0) for multiarch support. Note to backporters:
+    If you remove that dependency, debhelper will fall back to not doing
+    multiarch stuff in v9 mode, which is probably what you want.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 27 Feb 2011 15:43:12 -0400
 
