Removed old example rules files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ debhelper (8.1.3) UNRELEASED; urgency=low
   * Depend on dpkg-dev (>= 1.16.0) for multiarch support. Note to backporters:
     If you remove that dependency, debhelper will fall back to not doing
     multiarch stuff in v9 mode, which is probably what you want.
+  * Removed old example rules files.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 27 Feb 2011 15:43:12 -0400
 
