dh_installgsettings: New command to handle gsettings schema files. Closes: #604727

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ debhelper (8.1.3) UNRELEASED; urgency=low
     If you remove that dependency, debhelper will fall back to not doing
     multiarch stuff in v9 mode, which is probably what you want.
   * Removed old example rules files.
+  * dh_installgsettings: New command to handle gsettings schema files.
+    Closes: #604727
 
  -- Joey Hess <joeyh@debian.org>  Sun, 27 Feb 2011 15:43:12 -0400
 
