--- a/doc/TODO
+++ b/doc/TODO
@@ -26,6 +26,9 @@ Deprecated:
   library in case other things use them. Deprecate and remove.
 * dh --before , --after , --until , --remaining (not formally deprecated yet)
 * debian/compress files
+* deprecate dh_gconf for dh_installgsettings (stuff should be migrating
+  away from gconf, and then I can just remove it -- have not added warning
+  or depreaction docs yet)
 
 Also, grep the entire archive for all dh_* command lines,
 and check to see what other switches are not being used, and maybe remove
