French translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (8.1.3) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * dh_auto_clean: Inhibit logging, so that, if dh_auto_clean is used
     in some rule other than clean, perhaps to clean up an intermediate
     build before a second build is run, debian/rules clean still runs it.
@@ -17,6 +18,10 @@ debhelper (8.1.3) UNRELEASED; urgency=low
   * Removed old example rules files.
   * dh_installgsettings: New command to handle gsettings schema files.
     Closes: #604727
+
+  [ Valery Perrin ]
+  * update french translation.
+  * Fix french misspelling.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 27 Feb 2011 15:43:12 -0400
 
