--- a/debhelper.pod
+++ b/debhelper.pod
@@ -503,22 +503,6 @@ none is specified.
 
 =back
 
-=item v9
-
-This compatability level is still open for development; use with caution.
-
-Changes from v8 are:
-
-=over 8
-
-=item - 
-
-Multiarch support. In particular, B<dh_auto_configure> passes
-multiarch directories to autoconf in --libdir and --libexecdir,
-while B<dh_makeshlibs> detects packages containing multiarch
-directories and sets a Pre-Dependency on multiarch-support in
-${misc:Pre-Depends}
-
 =item v8
 
 This is the recommended mode of operation.
@@ -547,6 +531,24 @@ any switches come after it. Ie, use "B<dh $@ --foo>", not "B<dh --foo $@>".
 =item -
 
 B<dh_auto_>I<*> prefer to use Perl's B<Module::Build> in preference to F<Makefile.PL>.
+
+=back
+
+=item v9
+
+This compatability level is still open for development; use with caution.
+
+Changes from v8 are:
+
+=over 8
+
+=item - 
+
+Multiarch support. In particular, B<dh_auto_configure> passes
+multiarch directories to autoconf in --libdir and --libexecdir,
+while B<dh_makeshlibs> detects packages containing multiarch
+directories and sets a Pre-Dependency on multiarch-support in
+${misc:Pre-Depends}
 
 =back
 
