--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (8.1.3) UNRELEASED; urgency=low
+debhelper (8.1.3) unstable; urgency=low
 
   [ Joey Hess ]
   * dh_auto_clean: Inhibit logging, so that, if dh_auto_clean is used
@@ -23,7 +23,7 @@ debhelper (8.1.3) UNRELEASED; urgency=low
   * update french translation.
   * Fix french misspelling.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 27 Feb 2011 15:43:12 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 05 Apr 2011 13:09:43 -0400
 
 debhelper (8.1.2) unstable; urgency=low
 
