--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-debhelper (8.1.4) UNRELEASED; urgency=low
+debhelper (8.1.5) UNRELEASED; urgency=low
+
+  * Fix Typos in documentation regarding {pre,post}{inst,rm}
+    Closes: #623709
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 22 Apr 2011 16:13:18 -0400
+
+debhelper (8.1.4) unstable; urgency=low
 
   * dh_clean: Remove debhelper logs for all packages, including packages
     not being acted on. dh can sometimes produce such logs by accident
@@ -8,7 +15,7 @@ debhelper (8.1.4) UNRELEASED; urgency=low
     for other reasons, like interrupted builds during development, 
     and it should be safe to clean them all. Closes: #623446
 
- -- Joey Hess <joeyh@debian.org>  Thu, 21 Apr 2011 14:05:52 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Apr 2011 14:12:05 -0400
 
 debhelper (8.1.3) unstable; urgency=low
 
