update for dh_ucf

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.1.5) UNRELEASED; urgency=low
+
+  * dh_ucf: New command, contributed by Jeroen Schot. Closes: #213078
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 25 Apr 2011 19:30:01 -0400
+
 debhelper (8.1.4) unstable; urgency=low
 
   * dh_clean: Remove debhelper logs for all packages, including packages
