dh_installgsettings: Correct bug in use of find that caused some  gsettings files to be missed. Closes: #624377

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (8.1.5) UNRELEASED; urgency=low
 
   * dh_ucf: New command, contributed by Jeroen Schot. Closes: #213078
+  * dh_installgsettings: Correct bug in use of find that caused some 
+    gsettings files to be missed. Closes: #624377
 
  -- Joey Hess <joeyh@debian.org>  Mon, 25 Apr 2011 19:30:01 -0400
 
