--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (8.1.5) UNRELEASED; urgency=low
+debhelper (8.1.5) unstable; urgency=low
 
   * dh_ucf: New command, contributed by Jeroen Schot. Closes: #213078
   * dh_installgsettings: Correct bug in use of find that caused some 
     gsettings files to be missed. Closes: #624377
 
- -- Joey Hess <joeyh@debian.org>  Mon, 25 Apr 2011 19:30:01 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 27 Apr 2011 21:33:50 -0400
 
 debhelper (8.1.4) unstable; urgency=low
 
