--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.1.6) unstable; urgency=low
+
+  * dh_ucf: Fix missing space before ']'s in postrm autoscript.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 28 Apr 2011 12:33:42 -0400
+
 debhelper (8.1.5) unstable; urgency=low
 
   * dh_ucf: New command, contributed by Jeroen Schot. Closes: #213078
