dh_movefiles: Optimise use of xargs. Closes: #627737

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (8.1.7) UNRELEASED; urgency=low
 
   * Fix example. Closes: #627534
   * Fix error message. Closes: #628053
+  * dh_movefiles: Optimise use of xargs. Closes: #627737
 
  -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2011 15:24:19 -0400
 
