make standard targets support a v9 feature

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -550,6 +550,11 @@ while B<dh_makeshlibs> detects packages containing multiarch
 directories and sets a Pre-Dependency on multiarch-support in
 ${misc:Pre-Depends}
 
+=item -
+
+dh supports use of standard targets in debian/rules without needing
+to manually define the dependencies between targets there.
+
 =back
 
 =back
