--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ debhelper (8.1.7) UNRELEASED; urgency=low
   * Fix example. Closes: #627534
   * Fix error message. Closes: #628053
   * dh_movefiles: Optimise use of xargs. Closes: #627737
-  * dh: Now any standard rules file targets, including build-arch,
+  * dh: In v9, any standard rules file targets, including build-arch,
     build-indep, build, install, etc, can be defined in debian/rules
     without needing to explicitly tell make the dependencies between
     the targets. Closes: #629139
